--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,9 +11,9 @@
     justify-content: space-between;
     align-items: center;
     /* padding: 0.5% 2%; */
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    /* padding-top: 3px; */
+    /* padding-bottom: 10px; */
+    /* margin-bottom: 10px; */
     /* padding: 2% 0.5% 0 1%; */
 }
 h1{
